# AdventOfCode

./: .gitignore  README.md  day1  pyproject.toml
python/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
python/adventofcode/: pyproject.toml
python/adventofcode/adventofcode/scripts/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
rust/: day1  day1.rs
rust/adventofcode/: Cargo.toml  day1
rust/adventofcode/src/: lib.rs
rust/adventofcode/src/scripts/: day1  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
