[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code challenges 2022"
authors = ["brendan-reid91 <brendan.reid1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
numpy = "^1.23.5"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
