[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["brendan-reid91 <brendan.reid1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
black = "^22.12.0"
networkx = "^2.8.8"
matplotlib = "^3.6.2"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
