[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-clean = "0.1.0"
phf = {version="0.11.1", features = ["macros"]}
lazy_static = "1.4.0"
itertools = "0.10.5"

[[bin]]
name = "day1"
path="src/scripts/day1.rs"
test=false
bench=false

[[bin]]
name = "day2"
path="src/scripts/day2.rs"
test=false
bench=false

[[bin]]
name = "day3"
path="src/scripts/day3.rs"
test=false
bench=false
